时间倒计时和左右轮播

--- a/4.渐变轮播图/index.html
+++ b/4.渐变轮播图/index.html
@@ -10,13 +10,13 @@
     <div class="bannercontainer">
         <div id = "banner">
             <ul>
-                <li id = "banner0">
+                <li id = "banner0" class="on">
                     <img src="lunbo1.png">
                 </li>
-                <li id = "banner1">
+                <li id = "banner1" class="out">
                     <img src="lunbo2.png">
                 </li>
-                <li id = "banner2">
+                <li id = "banner2" class="out">
                     <img src="lunbo3.png">
                 </li>
             </ul>
